fixed overflow in header (plax)

--- a/markup/app/styles/sections/header.scss
+++ b/markup/app/styles/sections/header.scss
@@ -237,6 +237,7 @@ header[role='banner']
   {
     position: relative;
     box-sizing: border-box;
+    overflow: hidden;
 
     padding-top: 68px;
     min-height: 370px;
